<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="accept">Allow</string>
    <string name="act_acc">Accessibility Service «Typing Logger» must be activated manually. Press «Next» and follow the instructions below.</string>
    <string name="act_acc_step1">This page looks slightly different in different versions of Android. Look for «Services».</string>
    <string name="act_acc_step2">Press «Typing Logger».</string>
    <string name="act_acc_step3">Activate «Typing Logger» and press the «Allow» button.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Typing Logger</string>
    <string name="ask_delete">Do you want to delete all records of the selected day?</string>
    <string name="cancel">Cancel</string>
    <string name="content_copied">Content to be copied</string>
    <string name="content_shared">Content to be shared</string>
    <string name="delete">Delete</string>
    <string name="disclosure">This application uses Accessibility Service</string>
    <string name="next">Next</string>
    <string name="not_deleted">File could not be deleted!</string>
    <string name="ok">OK</string>
    <string name="purpose">The purpose of this application is to record text changes in order to recover them later if they were accidentally deleted. The recorded text is being stored on the device in a secure and private folder which is accessible only by the application. The data will not be transferred or shared with other applications or out of the device without the explicit intention of the user.</string>
    <string name="search_menu_title">Search</string>
    <string name="share">Share</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="type_something">Accessibility Service successfully activated! Type something and return to this app to see the result.</string>
    <string name="using_accessibility">Using Accessibility Service allows the application to record text changes in text input fields.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_type">Change\n</string>
    <string name="agree">Agree</string>
    <string name="agreements">Agreements</string>
    <string name="agreements_desc">Legal texts are also available in web</string>
    <string name="agreements_text">By using this software product you acknowledge that you have read, understand, accept and agree to be bound by following legal texts.</string>
    <string name="all">All</string>
    <string name="all_apps">All apps</string>
    <string name="altitude">Altitude</string>
    <string name="application_icon">Application icon</string>
    <string name="application_name">Application name</string>
    <string name="awaiting">Awaiting</string>
    <string name="back">Back</string>
    <string name="backward">Backward</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="battery">Battery</string>
    <string name="battery_icon">Battery icon</string>
    <string name="battery_level">Battery level</string>
    <string name="battery_level_param">Battery level: %1$s</string>
    <string name="bearing">Bearing</string>
    <string name="begin">Begin</string>
    <string name="bing">Bing</string>
    <string name="blank_space">Blank space</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="buy_now">Buy now</string>
    <string name="cacheManagerCancelBody">Do you want to cancel the map download?</string>
    <string name="cacheManagerCancelTitle">Cancel map download</string>
    <string name="cacheManagerCleanFailed">Cleaning failed. %s tiles deleted.</string>
    <string name="cacheManagerCleaningTitle">Cleaning tiles</string>
    <string name="cacheManagerDownloadingTitle">Downloading tiles</string>
    <string name="app_accessibility_additional_service">Type Keeper additional service</string>
    <string name="app_accessibility_service">Type Keeper service</string>
    <string name="app_additional_receiver">Additional receiver</string>
    <string name="app_additional_service">Additional service</string>
    <string name="app_description">Advanced text retainer &amp; more</string>
    <string name="app_greeting_text">Welcome to Type Keeper. It is designed to automatically save everything you type and copy, in all your apps on your Android device. Just open it whenever you want to view old input entries &amp; copy to clipboard events. By using it you will never lose text typing and clipboard data again.</string>
    <string name="app_init_text">Have you typed something and then accidentally erased it? Do you want to find an important piece of text you have written in past? An app just stopped and now all your text typing is lost? Or just your want to check your copy to clipboard history?</string>
    <string name="app_job_additional_service">Job additional service</string>
    <string name="app_job_service">Job service</string>
    <string name="copy">Copy</string>
    <string name="copy_clip">Copy</string>
    <string name="copy_primary_text">Copy primary text</string>
    <string name="copy_secondary_text">Copy Secondary text</string>
    <string name="copy_text">Copy text</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="date">Date</string>
    <string name="date_time">Date/Time</string>
    <string name="default_web_client_id">798009161604-g60c1jn9mhb9f5kt7tstr971j2rglu2p.apps.googleusercontent.com</string>
    <string name="degree">Degree</string>
    <string name="degrees">Degress</string>
    <string name="delete_clip">Delete</string>
    <string name="delete_selected">Delete selected</string>
    <string name="dest_title">destination title</string>
    <string name="developer">Developer</string>
    <string name="developer_data">pXdWorks</string>
    <string name="developer_param">Developer: %1$s</string>
    <string name="dialog_about">About this app</string>
    <string name="dialog_agreements">Agreements</string>
    <string name="dialog_agreements_text">Legal texts available at www.type-keeper.com</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_done_text">Everything seems to be done successfully!</string>
    <string name="dialog_got_it">Got it</string>
    <string name="dialog_loading">Loading</string>
    <string name="dialog_loading_text">Please wait while processing requested operation…</string>
    <string name="dialog_location_details">Location details</string>
    <string name="dialog_location_details_text">Details about current location</string>
    <string name="dialog_message">Message (not original)</string>
    <string name="dialog_mute_text">Mute (don not show) this dialog next 10 times</string>
    <string name="dialog_ok">OK</string>
    <string name="app_receiver">Receiver</string>
    <string name="app_service">Service</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

</resources>